--- a/ConfigFile.conf
+++ b/ConfigFile.conf
@@ -1,11 +1,13 @@
-hostMonitoramento:192.168.1.147
+hostMonitoramento:172.23.64.255
 hostMonitoramento2:172.23.95.211
 id:1
-intervaloCpu:2
-intervaloDB:2
+intervaloCpu:5
+intervaloDB:5
 intervaloLeituraConfiguracoes:15
-intervaloMemoria:2
-intervaloSwap:2
+intervaloMemoria:5
+intervaloSwap:5
 porta:8081
 porta2:8081
+postgresPathMain:/etc/postgresql/9.6/main
+postgresVersao:9.6                                                                                                                                                                                                                                                            
 servidorid:1
