--- a/Log.conf
+++ b/Log.conf
@@ -9,7 +9,7 @@ AtivarLogArquivo:true
 MostrarLogLog:true
 
 //Registros de alerta
-MostrarLogWorming:true
+MostrarLogWarming:true
 
 //registros de erros
 MostrarLogErro:true
