--- a/Log.conf
+++ b/Log.conf
@@ -5,7 +5,8 @@ AtivarLog:true
 AtivarLogArquivo:true
 
 //Quais registros devem ser impressos tanto no console quanto no arquivo log.log
-//registro de tudo o que esta sendo feito e dando certo
+//registro de tudo o que esta sendo feito
+
 MostrarLogLog:true
 
 //Registros de alerta
