--- a/ConfigLog.conf
+++ b/ConfigLog.conf
@@ -1,8 +1,8 @@
 ativarEmTelaInfo:true
-ativarEmTelaWarming:true
+ativarEmTelaWarning:true
 ativarEmTelaErro:true
 
 ativarEmArquivoInfo:true
-ativarEmArquivoWarming:true
+ativarEmArquivoWarning:true
 ativarEmArquivoErro:true
 
